[package]
name = "ioc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-rs = { workspace = true }
env_logger = { workspace = true }
ioc_core = { workspace = true }
ioc_derive = { workspace = true }
linkme = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[workspace]
members = [ "examples/success","ioc_core", "ioc_derive"]

[workspace.dependencies]
cfg-rs = { version = "0.4.0", features = ["full"] }
env_logger = "0.11.3"
anyhow = "1.0.86"
linkme = { version = "0.3" }
crossbeam-epoch = "0.9.18"
log = "0.4.21"
thiserror = "1.0.61"
proc-macro2 = "1.0.85"
quote = "1.0.36"
serde = { version = "1.0.203" }
toml = "0.8.14"
ioc_core = { path = "./ioc_core" }
ioc_derive = { path = "./ioc_derive" }

[workspace.dependencies.syn]
version = "2.0.66"
features = [
    "extra-traits",
    "derive",
    "parsing",
    "printing",
    "clone-impls",
    "proc-macro",
]
