[package]
name = "ioc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-rs = { workspace = true }
env_logger = { workspace = true, optional = true }
tracing = { workspace = true, optional = true}
tracing-subscriber = { workspace = true, optional = true , features = ["env-filter"]}
ioc_core = { workspace = true }
ioc_derive = { workspace = true }
linkme = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["tracing_log"]
tracing_log = ["tracing-subscriber", "tracing"]

[dev-dependencies]
anyhow = { workspace = true }

[workspace]
members = ["examples/success", "ioc_core", "ioc_derive", "simply_poem", "simply_poem/macro", "ioc_scan"]

[workspace.dependencies]
cfg-rs = { version = "0.4", features = ["full"] }
env_logger = { version = "0.11" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
anyhow = "1"
linkme = { version = "0.3" }
crossbeam-epoch = "0.9"
log = "0.4"
thiserror = "1"
proc-macro2 = "1"
quote = "1"
serde = { version = "1" }
toml = "0.8"
ioc_core = { path = "./ioc_core" }
ioc_derive = { path = "./ioc_derive" }
simply_poem = { path = "./simply_poem" }
simply_poem_macro = { path = "./simply_poem/macro" }
poem = { version = "3" }
poem-openapi = { version = "5" }
ioc_scan = {path = "./ioc_scan"}

[workspace.dependencies.syn]
version = "2"
features = [
    "extra-traits",
    "derive",
    "parsing",
    "printing",
    "clone-impls",
    "proc-macro",
]
