[package]
name = "ioc_derive"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = [
    "derive",
] }
syn = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[lib]
proc-macro = true
