[package]
name = "ioc_mvc"
version = "0.1.0"
edition = "2021"

[dependencies]
ioc_mvc_derive = { workspace = true }
ioc_core = { workspace = true }
ioc_core_derive = { workspace = true }
tracing = { workspace = true }
cfg-rs = { workspace = true }

[dependencies.poem]
workspace = true

[dependencies.poem-openapi]
workspace = true
features = ["swagger-ui", "openapi-explorer"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "signal"]

[features]
static-files = ["poem/static-files"]