[package]
name = "ioc_scan"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { workspace = true, features = ["full", "fold", "visit"] }
thiserror = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
prettyplease = { workspace = true }