[package]
name = "simply_poem_macro"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "visit-mut"] }
ioc_scan = { workspace = true }
darling = { workspace = true }

[lib]
proc-macro = true